--- a/module/localisation/RobotParticleLocalisation/data/config/RobotParticleLocalisation.yaml
+++ b/module/localisation/RobotParticleLocalisation/data/config/RobotParticleLocalisation.yaml
@@ -1,8 +1,7 @@
 process_noise_diagonal: [0.001, 0.001, 0.0001]
-start_state: [-3.5, 3.31, 1.57]
-start_variance: [0.001, 0.001, 0.0000001]
 
-draw_particles: 20
+start_variance: [0.001, 0.001, 0.0000001] # Covariance
+
 n_particles: 20
 n_rogues: 0
 reset_range: [2, 2, 0]
