--- a/module/localisation/BallLocalisation/data/config/BallLocalisation.yaml
+++ b/module/localisation/BallLocalisation/data/config/BallLocalisation.yaml
@@ -1,5 +1,5 @@
 # Controls the minimum log level that NUClear log will display
-log_level: DEBUG
+log_level: WARN
 
 process_noise_diagonal: [0.01, 0.01]
 # start_state: [5, 0]
