--- a/module/localisation/Localisation/data/config/Localisation.yaml
+++ b/module/localisation/Localisation/data/config/Localisation.yaml
@@ -5,10 +5,10 @@ log_level: DEBUG
 grid_size: 0.01
 
 # Number of particles
-num_particles: 100
+n_particles: 1000
 
-initial_state: [0.0, 0.0, 0.0]
+initial_state: [0, 0, 0]
 
-initial_covariance: [0.01, 0.01, 0.0001]
+initial_covariance: [0.00001, 0.00001, 0.00001]
 
-process_noise: [0.005, 0.005, 0.000001]
+process_noise: [0.0175, 0.0175, 0.025]
