--- a/module/localisation/Localisation/data/config/Localisation.yaml
+++ b/module/localisation/Localisation/data/config/Localisation.yaml
@@ -14,6 +14,8 @@ n_particles: 1500
 
 initial_state: [0, 0, 0]
 
-initial_covariance: [5, 5, 0.1]
+initial_covariance: [1, 1, 0.1]
 
-process_noise: [0.001, 0.001, 0.005]
+process_noise: [0.00075, 0.00075, 0.0005]
+
+save_map: false
