--- a/module/localisation/Localisation/data/config/Localisation.yaml
+++ b/module/localisation/Localisation/data/config/Localisation.yaml
@@ -1,5 +1,5 @@
 # Controls the minimum log level that NUClear log will display
-log_level: DEBUG
+log_level: WARN
 
 # Size of each cell in m
 grid_size: 0.01
