--- a/module/localisation/RobotLocalisation/data/plotjuggler/robot_localisation_layout.xml
+++ b/module/localisation/RobotLocalisation/data/plotjuggler/robot_localisation_layout.xml
@@ -1,3 +1,4 @@
+ <!-- PlotJuggler Layout for Robot Localisation, shows a map of the field, the robot's position/heading and the field lines observations from the robot's estimated position and orientation. -->
 <?xml version='1.0' encoding='UTF-8'?>
 <root>
  <tabbed_widget name="Main Window" parent="main_window">
@@ -45,4 +46,3 @@
  <snippets/>
  <!-- - - - - - - - - - - - - - - -->
 </root>
-
