--- a/module/localisation/BallFilter/data/config/BallFilter.yaml
+++ b/module/localisation/BallFilter/data/config/BallFilter.yaml
@@ -1,5 +1,5 @@
 # Controls the minimum log level that NUClear log will display
-log_level: WARN
+log_level: INFO
 
 # Smoothing factor used in exponential filter on ball position
 smoothing_factor: 0.2
