--- a/module/localisation/RobotLocalisation/data/config/RobotLocalisation.yaml
+++ b/module/localisation/RobotLocalisation/data/config/RobotLocalisation.yaml
@@ -5,16 +5,22 @@ log_level: DEBUG
 grid_size: 0.01
 
 # Number of particles
-n_particles: 2500
+n_particles: 500
 
 # Initial guess of where the robot starts on the field
-initial_state: [0, 0, 0]
+initial_state: [3, 3, -1.571]
 
 # Our confidence in the initial guess of where the robot starts on the field
 initial_covariance: [1, 1, 0.1]
 
 # Amount of noise added to the particles (how much world can move to adjust for drift) at each time update
-process_noise: [0.0005, 0.0005, 0.0005]
+process_noise: [0.00005, 0.00005, 0.001]
+
+# Amount of uncertainty in our field line measurements
+measurement_noise: 0.05
+
+# Maximum range of a field line observation (currently distance between opposing corners of field)
+max_range: 11
 
 # Bool to save a csv file of the generated occupancy grid map
 save_map: false
