--- a/module/localisation/RobotLocalisation/data/config/RobotLocalisation.yaml
+++ b/module/localisation/RobotLocalisation/data/config/RobotLocalisation.yaml
@@ -1,5 +1,5 @@
 # Controls the minimum log level that NUClear log will display
-log_level: INFO
+log_level: DEBUG
 
 # Size of each cell in the occupancy map, each cell has an area of grid_size x grid_size [metres]
 grid_size: 0.01
@@ -8,10 +8,12 @@ grid_size: 0.01
 n_particles: 1000
 
 # Initial guess of where the robot starts on the field
-initial_state: [3, 3, -1.571]
+initial_state:
+  - [3.0, 3.26, -1.571]
+  - [3.0, -3.0, 1.571]
 
 # Our confidence in the initial guess of where the robot starts on the field
-initial_covariance: [1, 1, 0.1]
+initial_covariance: [3.0, 3.0, 0.5]
 
 # Amount of noise added to the particles (how much world can move to adjust for drift) at each time update
 process_noise: [0.005, 0.005, 0.001]
