--- a/module/localisation/RobotLocalisation/data/config/RobotLocalisation.yaml
+++ b/module/localisation/RobotLocalisation/data/config/RobotLocalisation.yaml
@@ -7,6 +7,10 @@ grid_size: 0.01
 # Number of particles
 n_particles: 1000
 
+n_rogues: 0
+
+reset_range: [2, 2, 0]
+
 # Initial guess of where the robot starts on the field
 initial_state:
   - [3.0, 3.26, -1.571]
