--- a/module/localisation/RobotLocalisation/data/config/RobotLocalisation.yaml
+++ b/module/localisation/RobotLocalisation/data/config/RobotLocalisation.yaml
@@ -1,5 +1,5 @@
 # Controls the minimum log level that NUClear log will display
-log_level: INFO
+log_level: DEBUG
 
 # Size of each cell in the occupancy map, each cell has an area of grid_size x grid_size [metres]
 grid_size: 0.01
@@ -20,7 +20,7 @@ initial_state:
 initial_covariance: [3.0, 3.0, 0.5]
 
 # Amount of noise added to the particles (how much world can move to adjust for drift) at each time update
-process_noise: [0.005, 0.005, 0.001]
+process_noise: [0.0075, 0.0075, 0.001]
 
 # Amount of uncertainty in our field line measurements
 measurement_noise: 0.01
